# visus-framework-web

./: .gitignore  LICENSE  README.md  TESTING.md  mkdocs.yml  pyproject.toml
examples/: demo_rpa.py  dolar.py  login.py  login_mcp.py  login_rpa.py
examples/.visus/: session.json
examples/visus-runs/practice-login-20260603-161754/: report.html
examples/visus-runs/practice-login-20260603-163844/: report.html
examples/visus-runs/practice-login-20260603-163938/: report.html
skills/developing-visus-web/: SKILL.md
skills/using-visus-web/: SKILL.md
src/visus/web/: __init__.py  config.py  engine.py  errors.py  network.py  pytest_plugin.py  registry.py  rpa.py  tracing.py
src/visus/web/api/: _htmlsel.py  _steps.py  assertions.py  browser.py  context.py  events.py  fields.py  frame_locator.py  input.py  locator.py  page.py
src/visus/web/async_api/: __init__.py
src/visus/web/backends/: base.py  selenium_backend.py
src/visus/web/backends/browsers/: _ie_preflight.py  chrome.py  edge.py  edge_ie.py  firefox.py
src/visus/web/backends/selenium/: _diagnostics.py  actionability.py  driver_delegate.py  expect_engine.py  resolver.py
src/visus/web/backends/selenium/js/: __init__.py  bundle.js
src/visus/web/cli/: __init__.py  codegen.py  console.py  main.py  session_client.py  session_server.py
src/visus/web/mcp/: __init__.py  server.py  session.py
src/visus/web/observability/: recorder.py  report.py
src/visus/web/vision/: __init__.py  _images.py  imaging.py  ocr.py
tests/: conftest.py  test_api_wiring.py  test_async_api_unit.py  test_backend_protocols.py  test_browsers_chrome.py  test_browsers_edge.py  test_browsers_edge_ie.py  test_browsers_firefox.py  test_cli.py  test_cli_session.py  test_codegen.py  test_config.py  test_diagnostics.py  test_e2e_actions.py  test_e2e_actions_more.py  test_e2e_async.py  test_e2e_async_more.py  test_e2e_async_parity.py  test_e2e_backtrack.py  test_e2e_cli_session.py  test_e2e_contexts.py  test_e2e_downloads.py  test_e2e_edge.py  test_e2e_edge_ie.py  test_e2e_edge_rpa.py  test_e2e_errors.py  test_e2e_events.py  test_e2e_expect.py  test_e2e_expect_more.py  test_e2e_fields.py  test_e2e_firefox.py  test_e2e_frames.py  test_e2e_input.py  test_e2e_launch.py  test_e2e_locators.py  test_e2e_locators_more.py  test_e2e_mcp.py  test_e2e_navigation.py  test_e2e_network.py  test_e2e_observability.py  (+22 more)
tests/fixtures/: actions.html  backtrack.html  backtrack_depth.html  deep.html  download.txt  downloads.html  expects.html  fields.html  forms.html  frames.html  index.html  inner.html  input.html  interactions.html  locators.html  network.html  overlay.html  page2.html  popups.html  rpa.html  shadow.html  smartsel.html
