[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visus-web"
version = "0.0.1"
description = "Modern, Playwright-style web automation on a pure Selenium engine, with BotCity RPA reach."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Matheus Pereira" }]
dependencies = ["selenium>=4.38,<5"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/visus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "browser: integration test that launches a real headless browser",
]
timeout = 60
addopts = "-n auto --dist loadfile --cov=visus.web --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
packages = ["visus.web"]
strict = true
