[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visus-web"
version = "0.1.0"
description = "Modern, Playwright-style web automation on a pure Selenium engine, with BotCity RPA reach."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Matheus Pereira" }]
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]
dependencies = ["selenium>=4.38,<5"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
]
vision = [
    "rapidocr-onnxruntime>=1.3.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]
mcp = [
    "mcp>=1.2.0",
]
cli = [
    "typer>=0.12.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

[project.scripts]
visus = "visus.web.cli.main:app"
visus-web-mcp = "visus.web.mcp.server:main"

[project.entry-points.pytest11]
visus_web = "visus.web.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/visus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "browser: integration test that launches a real headless browser",
]
timeout = 60
asyncio_mode = "auto"
# -p no:visus_web: our own pytest11 entry point would import visus.web BEFORE
# pytest-cov starts measuring, zeroing out import-time coverage. The plugin is
# still exercised explicitly by tests/test_pytest_plugin.py (pytester sessions).
addopts = "-p no:visus_web -n auto --dist loadfile --cov=visus.web --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Long lines in CSS/HTML/JS string literals are unavoidable
"src/visus/web/observability/report.py" = ["E501"]
"src/visus/web/backends/selenium/driver_delegate.py" = ["E501"]
"src/visus/web/tracing.py" = ["E501"]
# Demo script embeds raw HTML/JS strings; long lines are unavoidable
"examples/*.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
packages = ["visus.web"]
strict = true

[[tool.mypy.overrides]]
module = ["rapidocr_onnxruntime.*", "cv2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true
